@@ -397,7 +397,6 @@ BEGIN_MESSAGE_MAP(DboxMain, CDialog)
   ON_NOTIFY(HDN_ITEMCHANGED, IDC_LIST_HEADER, OnHeaderNotify)
 
   ON_COMMAND(ID_MENUITEM_EXIT, OnOK)
-  ON_COMMAND(ID_MENUITEM_EXIT_ST, OnOK)
   ON_COMMAND(ID_MENUITEM_MINIMIZE, OnMinimize)
   ON_COMMAND(ID_MENUITEM_UNMINIMIZE, OnUnMinimize)
 
@@ -569,7 +568,6 @@ const DboxMain::UICommandTableEntry DboxMain::m_UICommandTable[] = {
   {ID_MENUITEM_CLEARRECENTENTRIES, true, true, true, false},
   {ID_MENUITEM_MINIMIZE, true, true, true, true},
   {ID_MENUITEM_UNMINIMIZE, true, true, true, true},
-  {ID_MENUITEM_EXIT_ST, true, true, true, true},
   // Default Main Toolbar buttons - if not menu items
   //   None
   // Optional Main Toolbar buttons
@@ -2699,13 +2697,6 @@ int DboxMain::OnUpdateMenuToolbar(const UINT nID)
       }
       ReleaseDC(pDC);
 #endif
-      break;
-    }
-    // -VdG- Disable SystemTray-Exit if CPWDialog "open"
-    case ID_MENUITEM_EXIT_ST:
-    {
-      //if (m_nDialogOpen != 0)
-      //  iEnable = false;
       break;
     }
     // Disable Minimize if already minimized
